[tool.poetry]
name = "first-python-backtrader"
version = "0.1.0"
description = ""
authors = ["Evan <evanz1215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
backtrader = "^1.9.78.123"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
